<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">一览无余</string>
    <string name="component">组件</string>
    <string name="for_test">测试</string>
    <string name="function_list">功能列表</string>
    <string name="action_settings">Settings</string>
    <string name="open_source">开源组件</string>
    <string name="study">学习资料</string>
    <string name="java_api">Java API</string>
    <string name="java_manual">Java Manual</string>
    <string name="file_upload">文件上传</string>
    <string name="out_login">外站登陆</string>
    <string name="animate_example">动画示例</string>
    <string name="list_view_auto_data">ListView自动加载数据</string>
    <string name="get_phone_info">获取手机信息</string>
    <string name="qucik_mark">二维码生成和扫描</string>
    <string name="ios_list_del">仿IOS ListView滑动删除</string>
    <string name="view_flipper">viewPager做引导图</string>
    <string name="event_motion">事件/手势</string>
    <string name="tab_activity">TabActivity</string>
    <string name="simple_sliding_menu">简单的SlidingMenu</string>
    <string name="stardand_listview">standard ListView</string>
    
    <string name="horizontalListView">HorizontalListView</string>
    <string name="test_ui_memory">测试UI内存的占用</string>
    <string name="test_shape">阴影</string>
    <string name="sure">确定</string>
    <string name="cancle">取消</string>
    <string name="view_pager">viewPager做图片焦点图</string>
    <string name="web_view">WebView</string>
    <string name="media_test">media测试</string>
    <string name="common_widgets">常见控件</string>
    <string name="load_data">加载中&#8230;</string>
    <string name="get_more">加载更多</string>
    <string name="play_sound">播放声音</string>
    <string name="show_hide_menu">隐藏/显示</string>
    <string name="cpu_memory_battery">cpu/内存信息/电池电量</string>
    <string name="goNow">立即进入</string>
    <string name="cached">缓存完成</string>
    <string name="caching">正在缓存</string>
    <string name="begin_scan">扫描</string>
    <string name="copy">copy到粘贴版</string>

</resources>
