<?xml version="1.0" encoding="utf-8"?>  
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"  
    android:layout_width="fill_parent"  
    android:layout_height="fill_parent"  
    android:orientation="vertical" >  
  	<!-- top动画 -->
    <TextView  
        android:id="@+id/menu"  
        android:layout_width="fill_parent"  
        android:layout_height="68dp"  
        android:background="@android:color/darker_gray"  
        android:gravity="center"  
        android:visibility="gone"
        android:text="@string/app_name"  
        android:textColor="@android:color/background_dark"
        android:layout_marginTop="50dp" />  
  
    <Button  
        android:id="@+id/button"  
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content"  
        android:layout_alignParentBottom="true"  
        android:text="@string/show_hide_menu" />  
    <!-- 右侧动画 -->
    <LinearLayout android:layout_width="wrap_content" android:layout_height="fill_parent"
        android:id="@+id/content" android:orientation="horizontal" android:layout_alignParentRight="true">
        <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="left|center_vertical"
            android:contentDescription="@string/app_name" android:background="@drawable/ic_download"
            android:id="@+id/b1"/>
        <LinearLayout android:layout_width="150dp" android:layout_height="fill_parent" android:orientation="vertical"
            android:background="#999">
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/action_settings"
                android:layout_margin="20dp"/>
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/action_settings"
                android:layout_margin="20dp"/>
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/action_settings"
                android:layout_margin="20dp"/>
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/action_settings"
                android:layout_margin="20dp"/>
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/action_settings"
                android:layout_margin="20dp"/>
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/action_settings"
                android:layout_margin="20dp"/>
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/action_settings"
                android:layout_margin="20dp"/>
        </LinearLayout>
    </LinearLayout>
    
    <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:contentDescription="@string/app_name" android:background="@drawable/ic_download"
            android:id="@+id/b2" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
  
    <!-- title -->
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="50dp"
        android:background="@drawable/title_bg" android:layout_alignParentTop="true">
        <FrameLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
             android:layout_centerInParent="true">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:src="@drawable/anim_bg" android:contentDescription="@string/app_name"
                android:layout_gravity="center"/>
            <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
                android:layout_gravity="center">
                <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/cached" android:gravity="center" android:layout_weight="1"
                    android:id="@+id/cached" android:background="#00000000"
                    android:textColor="#fff" android:textSize="16sp" android:layout_gravity="center_vertical"/>
                <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/caching" android:gravity="center" android:layout_weight="1"
                    android:id="@+id/caching" android:background="#00000000"
                    android:textColor="#fff" android:textSize="16sp" android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:background="@drawable/anim_top" android:text="@string/cached"
                android:textColor="#fff" android:textSize="16sp" android:gravity="center"
                android:layout_gravity="center_vertical" android:id="@+id/status" android:layout_marginTop="1dp" android:layout_marginLeft="1dp"/>
        </FrameLayout>
    </RelativeLayout>
</RelativeLayout>  